--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
     "@vercel/postgres": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.5",
+    "lucide-react": "^0.372.0",
     "next": "^14.2.2",
     "postgres": "^3.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
     "zod": "^3.23.0"
   },
