--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "drizzle-orm": "^0.29.5",
     "lucide-react": "^0.372.0",
     "next": "^14.2.2",
+    "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
+    "posthog-js": "^1.128.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.9.0",
