--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next-themes": "^0.3.0",
     "postgres": "^3.4.4",
     "posthog-js": "^1.128.3",
+    "posthog-node": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sonner": "^1.4.41",
