--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/nextjs": "^7.111.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.4.4",
+    "@upstash/ratelimit": "^1.1.2",
     "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
