Convert from Drizzle to Prisma. Check update.md to see all changes

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "drizzle-kit push:pg",
-    "db:studio": "drizzle-kit studio",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
@@ -21,7 +22,7 @@
     "@vercel/postgres": "^0.8.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "drizzle-orm": "^0.29.5",
+    "@prisma/client": "^5.19.1",
     "lucide-react": "^0.372.0",
     "next": "^14.2.2",
     "next-themes": "^0.3.0",
@@ -43,10 +44,9 @@
     "@types/react-dom": "^18.2.25",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
-    "drizzle-kit": "^0.20.17",
+    "prisma": "^5.19.1",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.2",
-    "eslint-plugin-drizzle": "^0.2.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
