--- a/package.json
+++ b/package.json
@@ -13,45 +13,47 @@
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.1",
-    "@prisma/client": "^5.19.1",
+    "@clerk/nextjs": "^6.32.0",
+    "@eslint/eslintrc": "^3.3.1",
+    "@prisma/client": "^6.16.1",
     "@radix-ui/react-slot": "^1.0.2",
-    "@sentry/nextjs": "^7.111.0",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@uploadthing/react": "^6.4.4",
-    "@upstash/ratelimit": "^1.1.2",
+    "@sentry/nextjs": "^10.11.0",
+    "@t3-oss/env-nextjs": "^0.13.8",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@uploadthing/react": "^7.3.3",
+    "@upstash/ratelimit": "^2.0.6",
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "lucide-react": "^0.372.0",
-    "next": "^14.2.2",
-    "next-themes": "^0.3.0",
+    "lucide-react": "^0.544.0",
+    "next": "^15.5.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "posthog-js": "^1.128.3",
-    "posthog-node": "^4.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sonner": "^1.4.41",
-    "tailwind-merge": "^2.3.0",
+    "posthog-node": "^5.8.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.9.0",
-    "zod": "^3.23.0"
+    "uploadthing": "^7.7.4",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.2",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^24.5.0",
+    "@types/react": "^19.1.13",
+    "@types/react-dom": "^19.1.9",
+    "@typescript-eslint/eslint-plugin": "^8.44.0",
+    "@typescript-eslint/parser": "^8.44.0",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.3",
     "pg": "^8.11.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.19.1",
-    "tailwindcss": "^3.4.3",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "prisma": "^6.16.1",
+    "tailwindcss": "^4.1.13",
     "typescript": "^5.4.5"
   },
   "ct3aMetadata": {
